[package]
name = "ksqldb"
version = "0.1.0-alpha.1"
authors = ["Naaman <naaman.the.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["http2"]
http2 = ["pin-project-lite"]
http1 = ["regex", "pin-project-lite", "lazy_static"]
trace = ["tracing", "tracing-futures"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
chrono = "^0.4"
thiserror = "^1.0"
serde_json = "^1.0"
bytes = "^1.0"
futures-core = "^0.3"
futures-util = "^0.3"

reqwest = { version = "^0.11", features = ["json", "stream"] }

pin-project-lite = { version = "0.2.4", optional = true } 
regex = { version = "1.4.3", optional = true }
lazy_static = { version = "^1.4", optional = true }
tracing = { version = "^0.1", optional = true } 
tracing-futures = { version = "^0.2", optional = true }

[dev-dependencies]
tokio = { version = "1.2.0", features = ["full"] } 
